<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kurso</string>
    <string name="lecionoj">Lições</string>
    <string name="kio_estas_esperanto">O que é Esperanto?</string>
    <string name="klarigo">Explicação</string>
    <string name="ekzercoj">Exercícios</string>
    <string name="leciono_1">Lição 1</string>
    <string name="leciono_2">Lição 2</string>
    <string-array name="menu_lecionoj">
        <item>Leciono 1</item>
        <item>Leciono 2</item>
        <item>Leciono 3</item>
        <item>Leciono 4</item>
        <item>Leciono 5</item>
        <item>Leciono 6</item>
        <item>Leciono 7</item>
        <item>Leciono 8</item>
        <item>Leciono 9</item>
        <item>Leciono 10</item>
        <item>Leciono 11</item>
        <item>Leciono 12</item>
    </string-array>
    <string name="teksto_kio_estas_esperanto">
		\tO Esperanto é uma língua criada para facilitar a comunicação entre os povos do mundo inteiro.\n\n
		\tMais de cem anos de utilização prática fizeram do Esperanto uma língua viva, capaz de exprimir qualquer nuance do pensamento humano.\n\n
		\tEla é internacional e neutra porque pertence a todos os povos e proporciona a comunicação entre pessoas de todo o mundo, sem qualquer tendência de hegemonia cultural, política, religiosa e econômica.\n\n
		\tQuem aprende o Esperanto tem o privilégio de usufruir de duas cidadanias que se interagem e mutuamente se enriquecem: a primeira todos recebem automaticamente quando nascem. É influenciada pelas tradições, costumes e crenças de cada país, ou seja, pela cultura local. A segunda ganhamos quando, voluntariamente, optamos por ser cidadãos do mundo, através do Esperanto. Mais ampla que a outra, engloba a cultura mundial, em suas mais diversas manifestações.\n\n
		\tOs que optam pela "dupla cidadania" através do Esperanto são chamados de esperantistas. São pessoas que não só conhecem a língua mas também a usam para comunicar-se com esperantistas de outros países, para estabelecer contatos com culturas diversas e são ativistas da divulgação e da defesa da idéia da Língua Internacional. \n\n
		\tApós o surgimento do Esperanto, pessoas que o aprenderam sentiram necessidade de organizar grupos para a prática, ensino e sua divulgação. Com o passar do tempo, esses grupos cresceram, alguns ultrapassaram as fronteiras do país de origem, novos surgiram e hoje temos centenas de organizações esperantistas em funcionamento no mundo inteiro. \n\n
		\tJuntamente com os esperantistas, esses grupos formam o Mundo do Esperanto, e as ações nele desenvolvidas constituem o que se convencionou chamar de movimento esperantista. \n\n
		\tAprenda Esperanto, torne-se esperantista e venha viver o mundo do Esperanto. Ele é, por natureza, seu também!\n\n
    </string>
    <string name="foriri">Sair</string>
    <string-array name="menu_leciono_1">
        <item>O alfabeto</item>
        <item>Compreensão auditiva I</item>
        <item>Pronomes pessoais</item>
        <item>Terminações</item>
        <item>Vocabulário</item>
        <item>Plural</item>
        <item>Pronomes possesivos</item>
        <item>Artigo</item>
        <item>Pronúncia</item>
        <item>Compreensão auditiva II</item>
        <item>Vorto-Ludo</item>
    </string-array>
    <string-array name="menu_leciono_2">
        <item>Sufixo -ino</item>
        <item>Acusativo (-n)</item>
        <item>Prefixo mal-</item>
        <item>Música</item>
        <item>Vocabulário</item>
        <item>Pronúncia</item>
        <item>Compreensão auditiva</item>
        <item>Vorto-Ludo</item>
        <item>Exercícios</item>
    </string-array>    
    <string name="butono_ok">OK</string>
    <string name="butono_ludi">Tocar</string>
    <string name="fenestro_averto">Alerta!</string>
    <string name="leciono_1_alfabeto">Em esperanto, as palavras são escritas exatamente como são pronunciadas, e são pronunciadas exatamente conforme o som de cada letra escrita. A sílaba forte é sempre a penúltima. Na aba de exercícios, clique para ouvir a pronúncia e repita em voz alta (deslize a tela para ouvir cada letra).</string>
    <string name="esperanta_alfabeto">O alfabeto do esperanto</string>
    <string name="personaj_pronomoj">Pronomes pessoais</string>
    <string name="singularo">Singular</string>
    <string name="pluralo">Plural</string>
    <string name="specialaj">Especiais</string>
    <string name="mi">Eu</string>
    <string name="vi_singularo">Tu, você</string>
    <string name="li">Ele</string>
    <string name="sxi">Ela</string>
    <string name="gxi">Ele/ela (para mostrar algo ou alguém, cujo sexo não é necessário especificar)</string>
    <string name="ni">Nós</string>
    <string name="vi_pluralo">Vós, vocês</string>
    <string name="ili">Eles/elas (é o plural de li, ŝi e ĝi)</string>
    <string name="oni">Pronome pessoal indefinido, que signfica "as pessoas", "a gente", etc. Usado quando não se quer ou não se pode definir quem fez ou sofreu a ação.</string>
    <string name="si">Pronome reflexivo da terceira pessoa (li, ŝi, ĝi, ili, oni), usado quando relaciona-se com o sujeiro da oração.</string>
    <string name="finajxoj">Terminações</string>
    <string name="verboj">Verbos</string>
    <string name="teksto_tempaj_verboj">O tempo infinitivo termina com -i: esti (ser, estar); o tempo passado termina com -is: estis (foi, esteve); o presente em -as: estas (é, está) e o futuro termina em -os: estos (será, estará). Outros tempos e modos verbais serão tratados nas lições seguintes.</string>
    <string name="mi_estas">Eu sou, estou</string>
    <string name="li_estis">Ele foi/era, esteve/estava</string>
    <string name="sxi_estas">Ela é, está</string>
    <string name="gxi_estos">Ele/ela será, estará</string>
    <string name="ni_estas">Nós somos, estamos</string>
    <string name="vi_estis">Vocês foram/eram, estavam/estiveram</string>
    <string name="ili_estas">Eles/elas são, estão</string>
    <string name="oni_estos">será, estará (sujeito indefinido)</string>
    <string name="substantivoj">Substantivos</string>
    <string name="teksto_substantivoj">Terminam com a letra "o":</string>
    <string name="amiko">amigo</string>
    <string name="frato">irmão</string>
    <string name="kafo">café</string>
    <string name="adjektivoj">Adjetivos</string>
    <string name="teksto_adjektivoj">Terminam com a letra "a":</string>
    <string name="bela">belo(a), bonito(a)</string>
    <string name="sana">são, sã, saudável</string>
    <string name="varma">quente</string>
    <string name="vortareto">Vocabulário</string>
    <string name="filo">filho</string>
    <string name="viro">homem (macho)</string>
    <string name="knabo">menino, garoto</string>
    <string name="instruisto">professor</string>
    <string name="floro">flor</string>
    <string name="patro">pai</string>
    <string name="kuko">bolo</string>
    <string name="lakto">leite</string>
    <string name="pano">pão</string>
    <string name="sukero">açúcar</string>
    <string name="teo">chá</string>
    <string name="granda">grande</string>
    <string name="nova">novo(a)</string>
    <string name="bona">bom, boa</string>
    <string name="seka">seco(a)</string>
    <string name="biskvito">biscoito</string>
    <string name="blanka">branco(a)</string>
    <string name="teksto_pluralo">O plural é formado pela adição da letra &quot;j&quot; ao final dos substantivos e adjetivos.</string>
    <string name="amikoj">amigos</string>
    <string name="patroj">pais (só do sexo masculino)</string>
    <string name="floroj">flores</string>
    <string name="belaj">belos (as), bonitos (as)</string>
    <string name="sanaj">sãos, sãs, saudáveis</string>
    <string name="bela_floro">bela flor</string>
    <string name="belaj_floroj">belas flores</string>
    <string name="sana_patro">pai saudável</string>
    <string name="sanaj_patroj">pais saudáveis</string>
    <string name="bona_amiko">bom amigo</string>
    <string name="bonaj_amikoj">bons amigos</string>
    <string name="posedaj_pronomoj">Pronomes possessivos</string>
    <string name="teksto_posedaj_pronomoj">Os pronomes possessivos são formados pela adição da terminação adjetiva ("a") aos pronomes pessoais:</string>
    <string name="teksto_posedaj_pronomoj_rimarko_pluralo">Observação: também os pronomes possessivos recebem a terminação "j" no plural:</string>
    <string name="mia">meu, minha</string>
    <string name="via">teu, tua, vosso, vossa</string>
    <string name="sxia">seu, sua, dela</string>
    <string name="lia">seu, sua, dele</string>
    <string name="gxia">seu, sua, dele, dela (neutro)</string>
    <string name="nia">nosso, nossa</string>
    <string name="ilia">seu, sua, deles</string>
    <string name="mia_amiko">meu amigo</string>
    <string name="miaj_amikoj">meus amigos</string>
    <string name="nia_floro">nossa flor</string>
    <string name="niaj_floroj">nossas flores</string>
    <string name="glitigu_ekranon">Deslize a tela para os lados para visualizar o conteúdo.</string>
    <string name="leciono_2_muzikvideo">Vamos ouvir agora uma canção em Esperanto, «Jen», do grupo argentino La Porkoj, premiado no concurso internacional de arte da Associação Mundial de Esperanto. Jen é equivalente ao «eis», em português. Pressione o botão abaixo para iniciar a canção.</string>
    <string name="teksto_auskultado">No exercício seguinte, você ouvirá uma palavra ou frase e deverá escrevê-la no espaço indicado. Se você acertar, a palavra ou frase aparecerá no painel, do contrário, a palavra será ouvida de novo em outro momento durante o exercício. Você deverá acertar pelo menos 70%.</string>
    <string-array name="auskultlisto">
		<item>amiko</item>
		<item>bela</item>
		<item>belaj floroj</item>
		<item>biskvito</item>
		<item>blanka</item>
		<item>bona</item>
		<item>bonaj amikoj</item>
		<item>filo</item>
		<item>floro</item>
		<item>frato</item>
		<item>ĝi</item>
		<item>ĝi estos</item>
		<item>granda</item>
		<item>ili</item>
		<item>ili estas</item>
		<item>instruisto</item>
		<item>kafo</item>
		<item>knabo</item>
		<item>kuko</item>
		<item>la floroj</item>
		<item>la knabo</item>
		<item>la pano</item>
		<item>la patroj</item>
		<item>lakto</item>
		<item>li</item>
		<item>li estis</item>
		<item>mi</item>
		<item>mi estas</item>
		<item>miaj amikoj</item>
		<item>ni</item>
		<item>ni estas</item>
		<item>nova</item>
		<item>oni</item>
		<item>oni estos</item>
		<item>pano</item>
		<item>sana</item>
		<item>seka</item>
		<item>si</item>
		<item>ŝi</item>
		<item>ŝi estas</item>
		<item>ŝia</item>
		<item>sukero</item>
		<item>teo</item>
		<item>varma</item>
		<item>vi</item>
		<item>vi estis</item>
		<item>viro</item>
    </string-array>
    <string name="gratulon_via_rezulto_estis_tre_bona">Parabéns! O seu resultado foi muito bom.</string>
    <string name="via_rezulto_ne_estis_tre_bona_provu_denove">Seu resultado não foi muito bom. Tente novamente.</string>
    <string-array name="auskultlisto_2">
		<item>akvo</item>
		<item>ami</item>
		<item>amikino</item>
		<item>amo</item>
		<item>avara</item>
		<item>bela</item>
		<item>birdo</item>
		<item>butiko</item>
		<item>fari</item>
		<item>filino</item>
		<item>filo</item>
		<item>forgesi</item>
		<item>havi</item>
		<item>insekto</item>
		<item>juna</item>
		<item>kapti</item>
		<item>lavi</item>
		<item>limonado</item>
		<item>malamiko</item>
		<item>malavara</item>
		<item>malbela</item>
		<item>maljuna</item>
		<item>malnova</item>
		<item>nova</item>
		<item>papero</item>
		<item>patrino</item>
		<item>patro</item>
		<item>peti</item>
		<item>plumo</item>
		<item>porti</item>
		<item>pura</item>
		<item>renkonti</item>
		<item>skribi</item>
		<item>sukeri</item>
		<item>taso</item>
		<item>trinki</item>
		<item>trovi</item>
		<item>vendi</item>
		<item>vidi</item>
		<item>virino</item>        
    </string-array>
        
</resources>
